[gd_scene load_steps=15 format=3 uid="uid://b4j8xqwxo7dqg"]

[ext_resource type="Script" path="res://scripts/Player/Player.gd" id="1_0hdxk"]
[ext_resource type="Script" path="res://scripts/Player/PlayerMovement.gd" id="2_1mjpf"]
[ext_resource type="Script" path="res://scripts/Player/TouchLookController.gd" id="3_2nkqi"]
[ext_resource type="Script" path="res://scripts/Player/ShootingController.gd" id="4_3orlr"]
[ext_resource type="Script" path="res://scripts/Player/PlayerHealth.gd" id="5_4psms"]
[ext_resource type="Script" path="res://scripts/Enemies/BugSpawner.gd" id="6_5qtnt"]
[ext_resource type="Script" path="res://scripts/UI/TouchControls.gd" id="7_6ruou"]
[ext_resource type="Script" path="res://scripts/UI/HUD.gd" id="8_7svpv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1hqjv"]
height = 2.0
radius = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2ikxw"]
height = 2.0
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_player"]
albedo_color = Color(0.2, 0.6, 1.0, 1.0)
metallic = 0.2
roughness = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(40, 0.2, 40)

[sub_resource type="QuadMesh" id="QuadMesh_ground"]
size = Vector2(40, 40)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.3, 0.7, 0.3, 1.0)

[sub_resource type="SphereShape3D" id="SphereShape3D_food"]
radius = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_food"]
radius = 0.5
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_food"]
albedo_color = Color(1.0, 0.8, 0.2, 1.0)
emission = Color(1.0, 0.8, 0.2, 0.3)

[sub_resource type="LabelSettings" id="LabelSettings_24"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_20"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_32"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_28"]
font_size = 28

[node name="Main" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="World"]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Ground"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_ground")
material_override = SubResource("StandardMaterial3D_ground")

[node name="Food" type="Area3D" parent="World" groups=["food"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -8)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Food"]
shape = SubResource("SphereShape3D_food")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Food"]
mesh = SubResource("SphereMesh_food")
material_override = SubResource("StandardMaterial3D_food")

[node name="Decorations" type="Node3D" parent="World"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.5
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 8)
collision_layer = 4
collision_mask = 1
script = ExtResource("1_0hdxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1hqjv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_2ikxw")
material_override = SubResource("StandardMaterial3D_player")

[node name="CameraPivot" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3)
fov = 75.0

[node name="PlayerMovement" type="Node" parent="Player"]
script = ExtResource("2_1mjpf")

[node name="TouchLookController" type="Node" parent="Player"]
script = ExtResource("3_2nkqi")

[node name="ShootingController" type="Node" parent="Player"]
script = ExtResource("4_3orlr")

[node name="PlayerHealth" type="Node" parent="Player"]
script = ExtResource("5_4psms")

[node name="BugSpawner" type="Node3D" parent="." groups=["bug_spawner"]]
script = ExtResource("6_5qtnt")

[node name="SpawnPoints" type="Node3D" parent="BugSpawner"]

[node name="SpawnPoint1" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1, -8)

[node name="SpawnPoint2" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, -8)

[node name="SpawnPoint3" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1, 8)

[node name="SpawnPoint4" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, 8)

[node name="SpawnPoint5" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -12)

[node name="SpawnPoint6" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 1, 0)

[node name="SpawnPoint7" type="Node3D" parent="BugSpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1, 0)

[node name="GameManager" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="TouchControls" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("7_6ruou")

[node name="MovementJoystick" type="Control" parent="UI/TouchControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -50.0

[node name="Background" type="ColorRect" parent="UI/TouchControls/MovementJoystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="Knob" type="ColorRect" parent="UI/TouchControls/MovementJoystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.8, 0.8, 1, 0.8)

[node name="CameraArea" type="Control" parent="UI/TouchControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -300.0
mouse_filter = 1

[node name="FireButton" type="Button" parent="UI/TouchControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -170.0
offset_right = -50.0
offset_bottom = -50.0
text = "ðŸ”«"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("8_7svpv")

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "Score: 0"
horizontal_alignment = 2
label_settings = SubResource("LabelSettings_24")

[node name="LivesLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
text = "Lives: 3"
label_settings = SubResource("LabelSettings_24")

[node name="WaveLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -200.0
offset_right = 75.0
offset_bottom = -160.0
text = "Wave: 1"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_20")

[node name="HealthBar" type="ProgressBar" parent="UI/HUD" groups=["health_bar"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -60.0
value = 100.0
show_percentage = false

[node name="DamageOverlay" type="ColorRect" parent="UI/HUD" groups=["damage_overlay"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 0, 0, 0)
mouse_filter = 2

[node name="GameOverPanel" type="Panel" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/HUD/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_32")

[node name="FinalScoreLabel" type="Label" parent="UI/HUD/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_24")

[node name="ButtonContainer" type="HBoxContainer" parent="UI/HUD/GameOverPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="UI/HUD/GameOverPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="UI/HUD/GameOverPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"

[node name="PausePanel" type="Panel" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="PauseLabel" type="Label" parent="UI/HUD/PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_28")

[node name="ResumeButton" type="Button" parent="UI/HUD/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="UI/HUD/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton2" type="Button" parent="UI/HUD/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="AudioManager" type="Node" parent="."]

[node name="BGMusic" type="AudioStreamPlayer" parent="AudioManager"]

[node name="ShootSound" type="AudioStreamPlayer" parent="AudioManager"]

[node name="BugHitSound" type="AudioStreamPlayer" parent="AudioManager"]

[node name="GameOverSound" type="AudioStreamPlayer" parent="AudioManager"]